statum-macros/tests/ui/invalid_state_tuple_variant.rs
extern crate statum;
use statum::state;

#[state]
enum BadState {
    Draft(u32, u32),
}
